--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.2.9",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
